fixed spacing on mobile view

--- a/css/output.css
+++ b/css/output.css
@@ -746,6 +746,11 @@
       height: calc(var(--spacing) * 72);
     }
   }
+  .md\:h-\[450px\] {
+    @media (width >= 48rem) {
+      height: 450px;
+    }
+  }
   .md\:grid-cols-2 {
     @media (width >= 48rem) {
       grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -754,6 +759,11 @@
   .md\:object-contain {
     @media (width >= 48rem) {
       object-fit: contain;
+    }
+  }
+  .md\:object-cover {
+    @media (width >= 48rem) {
+      object-fit: cover;
     }
   }
   .md\:object-top {
